<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_login_background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/custom3"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/inputLoginEmail"
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_login_background"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/inputLoginPassword"
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:maxLength="8"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_login_background"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="@color/custom3"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginButton"
            android:layout_width="196dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:background="@drawable/login_button_background"
            android:textColor="@color/white"
            android:text="login" />

        <TextView
            android:id="@+id/toRegister"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/don_t_have_account_sign_up"
            android:textColor="@color/custom3"
            android:textSize="12sp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressLogin"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>