<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_login_background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/inputUsername"
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_login_background"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="10dp"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:paddingStart="20dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_login_background"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:paddingStart="20dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/inputPhoneNumber"
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_login_background"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="10dp"
            android:hint="phone number"
            android:padding="12dp"
            android:paddingStart="20dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/inputDate"
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_login_background"
            android:drawableStart="@drawable/ic_date"
            android:drawablePadding="10dp"
            android:hint="@string/day_month_year"
            android:focusable="false"
            android:clickable="false"
            android:padding="12dp"
            android:paddingStart="20dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/inputPasswordFirst"
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_login_background"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="8"
            android:padding="12dp"
            android:paddingStart="20dp"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/inputPasswordSecond"
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_login_background"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="8"
            android:padding="12dp"
            android:paddingStart="20dp"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registrationButton"
            android:layout_width="196dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_button_background"
            android:text="@string/register"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/toLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/already_registered_login"
            android:textColor="@color/custom3"
            android:textSize="12sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>